Improve status description for 42N81. ()
Previously, it did not have proper support for more than one missing
parameter.